--- a/app/src/main/res/layout/activity_student_login.xml
+++ b/app/src/main/res/layout/activity_student_login.xml
@@ -8,10 +8,10 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="208dp"
-        android:layout_height="61dp"
+        android:layout_width="251dp"
+        android:layout_height="60dp"
         android:layout_marginStart="69dp"
-        android:layout_marginTop="59dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="70dp"
         android:text="Welcome Back!"
         android:textAlignment="center"
@@ -19,6 +19,7 @@
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,19 +32,21 @@
         android:layout_marginEnd="272dp"
         android:text="EMAIL"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <EditText
         android:id="@+id/editTextText3"
         android:layout_width="300dp"
         android:layout_height="47dp"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="13dp"
         android:ems="10"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
@@ -51,11 +54,12 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="240dp"
         android:text="PASSWORD"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
 
@@ -63,8 +67,8 @@
         android:id="@+id/editTextTextPassword"
         android:layout_width="300dp"
         android:layout_height="47dp"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="13dp"
         android:ems="10"
         android:inputType="textPassword"
@@ -77,14 +81,40 @@
         android:layout_width="326dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="268dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="10dp"
         android:text="Log in"
         android:textColorHighlight="#2196F3"
         android:textColorLink="#1E6EAE"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/forgot_pass" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="60dp"
+        android:text="We're so excited to see you again!"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <TextView
+        android:id="@+id/forgot_pass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="178dp"
+        android:text="Forgot your password?"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
