--- a/app/src/main/res/layout/activity_student_login.xml
+++ b/app/src/main/res/layout/activity_student_login.xml
@@ -79,7 +79,7 @@
     <Button
         android:id="@+id/button3"
         android:layout_width="326dp"
-        android:layout_height="40dp"
+        android:layout_height="45dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="10dp"
@@ -87,10 +87,12 @@
         android:textColorHighlight="#2196F3"
         android:textColorLink="#1E6EAE"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forgot_pass" />
+        app:layout_constraintTop_toBottomOf="@+id/forgot_pass"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView10"
