added button to enter class

--- a/app/src/main/res/layout/activity_qrscan.xml
+++ b/app/src/main/res/layout/activity_qrscan.xml
@@ -38,4 +38,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="113dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="114dp"
+        android:layout_marginBottom="49dp"
+        android:text="Enter Class"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/CameraPreview" />
 </androidx.constraintlayout.widget.ConstraintLayout>
