--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,9 @@
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="345dp"
+        android:layout_width="325dp"
         android:layout_height="99dp"
-        android:layout_marginStart="1dp"
+        android:layout_marginStart="10dp"
         android:layout_marginEnd="1dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,15 +22,17 @@
 
         <Button
             android:id="@+id/btnTeacherLogin"
-            android:layout_width="match_parent"
+            android:layout_width="325dp"
             android:layout_height="wrap_content"
-            android:text="Teacher Login" />
+            android:text="Teacher Login"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/btnStudentLogin"
-            android:layout_width="match_parent"
+            android:layout_width="325dp"
             android:layout_height="wrap_content"
-            android:text="Student Login" />
+            android:text="Student Login"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <TextView
