--- a/app/src/main/res/layout/activity_student_login.xml
+++ b/app/src/main/res/layout/activity_student_login.xml
@@ -31,22 +31,23 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="272dp"
         android:text="USERNAME"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <EditText
-        android:id="@+id/editTextText3"
-        android:layout_width="300dp"
+        android:id="@+id/ETstuname"
+        android:layout_width="277dp"
         android:layout_height="47dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="13dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="13dp"
         android:ems="10"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
@@ -58,14 +59,15 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="240dp"
         android:text="PASSWORD"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
+        app:layout_constraintTop_toBottomOf="@+id/ETstuname" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="300dp"
+        android:id="@+id/ETstupwd"
+        android:layout_width="277dp"
         android:layout_height="47dp"
         android:layout_marginStart="13dp"
         android:layout_marginTop="8dp"
@@ -77,13 +79,13 @@
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/BTNstulogin"
         android:layout_width="326dp"
         android:layout_height="45dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="10dp"
-        android:text="Log in"
+        android:text="Log In"
         android:textColorHighlight="#2196F3"
         android:textColorLink="#1E6EAE"
         android:textStyle="bold"
@@ -91,7 +93,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forgot_pass"
+        app:layout_constraintTop_toBottomOf="@+id/forgot_pass_stu"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
@@ -108,7 +110,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
-        android:id="@+id/forgot_pass"
+        android:id="@+id/forgot_pass_stu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="42dp"
@@ -117,6 +119,21 @@
         android:text="Forgot your password?"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/ETstupwd" />
+
+    <Button
+        android:id="@+id/BTNstusignup"
+        android:layout_width="325dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="178dp"
+        android:text="Sign Up"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BTNstulogin" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
