--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,18 +21,18 @@
         app:layout_constraintVertical_bias="0.862">
 
         <Button
-            android:id="@+id/btnTeacherLogin"
-            android:layout_width="325dp"
-            android:layout_height="wrap_content"
-            android:text="Teacher Login"
-            android:textStyle="bold" />
-
-        <Button
             android:id="@+id/btnStudentLogin"
             android:layout_width="325dp"
             android:layout_height="wrap_content"
-            android:text="Student Login"
+            android:text="For Student"
             android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnTeacherSignUp"
+            android:layout_width="325dp"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="For Teacher" />
     </LinearLayout>
 
     <TextView
