--- a/app/src/main/res/layout/activity_teacher_login.xml
+++ b/app/src/main/res/layout/activity_teacher_login.xml
@@ -8,18 +8,17 @@
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="118dp"
-        android:layout_height="29dp"
-        android:layout_marginStart="121dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="121dp"
-        android:text="Teacher Login"
+        android:layout_width="264dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="41dp"
+        android:text="Welcome teacher!"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.153"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/teacherImg" />
 
@@ -41,6 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="58dp"
+        android:layout_marginTop="88dp"
         android:layout_marginEnd="239dp"
         android:text="Username"
         android:textAllCaps="true"
@@ -48,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.92"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="273dp" />
+        app:layout_constraintTop_toBottomOf="@+id/teacherImg" />
 
     <EditText
         android:id="@+id/ETtecname"
@@ -110,9 +110,13 @@
         android:id="@+id/forgotPasswordTec"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="184dp"
         android:text="Forgot your password?"
-        tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="454dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ETtecpwd" />
 
     <Button
         android:id="@+id/BTNtecsignup"
