added student name that entered the class

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -11,15 +11,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="47dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="56dp"
         android:layout_marginEnd="47dp"
+        android:layout_marginBottom="85dp"
         android:fontFamily="casual"
         android:rotation="-19"
         android:text="Welcome"
         android:textAllCaps="true"
         android:textSize="50sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/TVstudentnamepresent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,17 +31,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="37dp"
-        android:layout_marginTop="111dp"
+        android:layout_marginTop="98dp"
         android:layout_marginEnd="38dp"
-        android:layout_marginBottom="103dp"
+        android:layout_marginBottom="80dp"
         android:rotation="13"
         android:text="You are now present"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView24"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView22" />
+        app:layout_constraintTop_toBottomOf="@+id/TVstudentnamepresent" />
 
     <TextView
         android:id="@+id/textView24"
@@ -46,12 +50,43 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="97dp"
         android:layout_marginEnd="98dp"
-        android:layout_marginBottom="175dp"
+        android:layout_marginBottom="156dp"
         android:rotation="-15"
         android:text="in the class"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView23" />
+
+    <TextView
+        android:id="@+id/TVstudentnamepresent"
+        android:layout_width="338dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="102dp"
+        android:layout_marginTop="85dp"
+        android:layout_marginEnd="102dp"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="35sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView22" />
+
+    <Button
+        android:id="@+id/BTNleaveclass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="112dp"
+        android:layout_marginTop="71dp"
+        android:layout_marginEnd="112dp"
+        android:layout_marginBottom="37dp"
+        android:text="Leave Class"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
