all in one commit: Things that are added/changed - added dependencies for Firebase - DbManager has been deleted - Replaced local database by Firebase - Authentication has been also taken care by Firebase - added activity that records student presence fro mentering the class - added service class to detect the app from being removed in recent apps

--- a/app/src/main/res/layout/activity_qrcode.xml
+++ b/app/src/main/res/layout/activity_qrcode.xml
@@ -7,7 +7,7 @@
     tools:context=".QRCodeActivity">
 
     <Button
-        android:id="@+id/BTNteclogin"
+        android:id="@+id/BTNmonitor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="96dp"
