--- a/app/src/main/res/layout/activity_qrscan.xml
+++ b/app/src/main/res/layout/activity_qrscan.xml
@@ -11,12 +11,14 @@
         android:layout_width="345dp"
         android:layout_height="50dp"
         android:layout_marginStart="1dp"
+        android:layout_marginTop="59dp"
         android:layout_marginEnd="1dp"
+        android:layout_marginBottom="17dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/CameraPreview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TVstudentname">
+        app:layout_constraintTop_toBottomOf="@+id/TVstudentemail">
 
         <EditText
             android:id="@+id/ETcode"
@@ -31,8 +33,8 @@
     <androidx.camera.view.PreviewView
         android:id="@+id/CameraPreview"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
-        android:layout_marginBottom="16dp"
+        android:layout_height="350dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@+id/BTNenterclass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -54,19 +56,58 @@
         app:layout_constraintTop_toBottomOf="@+id/CameraPreview" />
 
     <TextView
-        android:id="@+id/TVstudentname"
+        android:id="@+id/welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="62dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="62dp"
-        android:layout_marginBottom="30dp"
         android:fontFamily="casual"
-        android:text="StudentName"
+        android:text="Welcome"
         android:textAlignment="center"
-        android:textSize="35sp"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/TVstudentemail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="145dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="145dp"
+        android:layout_marginBottom="23dp"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/welcome" />
+
+    <LinearLayout
+        android:layout_width="345dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="19dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TVstudentemail">
+
+        <EditText
+            android:id="@+id/ETstudentname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Enter your name for the class"
+            android:inputType="text"
+            android:textAlignment="center" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
